<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6675d4"
                android:id="@+id/fragmet_register">
    <TextView
        android:id="@+id/mail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        style="?android:listSeparatorTextViewStyle"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="7dp"/>
    <EditText
        android:id="@+id/mail_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_login"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/mail_text_view"
        android:hint="@string/enter_mail_address"
        android:padding="4dp"/>
    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        style="?android:listSeparatorTextViewStyle"
        android:textColor="@android:color/white"
        android:layout_below="@+id/mail_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"/>
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_login"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/password_text_view"
        android:hint="@string/password"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/verify_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_psw"
        style="?android:listSeparatorTextViewStyle"
        android:textColor="@android:color/white"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"/>

    <EditText
        android:id="@+id/verify_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_login"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/verify_password_textview"
        android:hint="@string/verification_password"
        android:padding="4dp"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_reg"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_below="@+id/verify_password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"/>
</RelativeLayout>