<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196f3 "
    android:id="@+id/fragment_login">
    <ImageView
        android:id="@+id/location_image"
        android:layout_width="207dp"
        android:layout_height="164dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/konum_login"/>
    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_login"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_login"
        android:ems="10"
        android:hint="@string/star"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="5dp"
        android:layout_marginTop="3dp"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/login_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_login"
        android:onClick="onClickBtnLogin"
        android:text="@string/login_now"
        android:textColor="#e8f5e9"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_reg"
        android:text="@string/sign_up"
        android:textColor="#e8f5e9"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/deneme_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LocDeneme"/>


</LinearLayout>